[gd_scene load_steps=5 format=3 uid="uid://c6wjmxyt2q7nt"]

[ext_resource type="Script" path="res://scenes/entities/environment/collectables/DeadMouse.gd" id="1_2ouxb"]
[ext_resource type="Texture2D" uid="uid://0hlhh08f5dre" path="res://assets/props/potionIngredients/DeadMouse.png" id="2_gk1v8"]
[ext_resource type="Texture2D" uid="uid://com6o8bmu7h3p" path="res://assets/ui/E_button.png" id="3_h3n0h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0yace"]

[node name="DeadMouse" type="Area2D"]
collision_layer = 16
script = ExtResource("1_2ouxb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gk1v8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0yace")

[node name="E_button" type="Sprite2D" parent="."]
position = Vector2(0, -25)
texture = ExtResource("3_h3n0h")

[connection signal="body_entered" from="." to="." method="_on_body_entered" flags=18]
[connection signal="body_exited" from="." to="." method="_on_body_exited" flags=18]
